@@ -8,7 +8,8 @@ copyright_year   = 2014
 -remove = Git::Tag
 use_twitter = 1
 
-;[ReadmeFromPod]
+[RemovePrereqs]
+remove = Test::Signature
 
 [Git::Tag]
 tag_format  = v%v%t
