@@ -1,6 +1,0 @@
-#!perl -w
-
-use Test::More tests => 1;
-use Test::Signature;
-
-signature_ok();
